apps/utility/home-assistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
  template:
    spec:
      containers:
        - image: ghcr.io/home-assistant/home-assistant:2023.12.4
          imagePullPolicy: Always
          name: home-assistant
          ports:
            - name: web
              containerPort: 8123
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 2Gi
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: hass-config-pvc
