apps/utility/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 8123
  selector:
    app: home-assistant
