apps/utility/home-assistant/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hass.stonegarden.dev`)
      kind: Rule
      services:
        - name: home-assistant
          port: 8123
